@@ -2,19 +2,22 @@
 #include <config.h>
 #include "raw1394util.h"
 #include <errno.h>
+#include <time.h>
 
 int cooked1394_read(raw1394handle_t handle, nodeid_t node, nodeaddr_t addr,
                     size_t length, quadlet_t *buffer)
 {
     int retval, i;
+	struct timespec ts = {0, RETRY_DELAY};
 #ifdef RAW1394_V_0_8
     int ackcode, rcode;
 #endif
     for(i=0; i<MAXTRIES; i++) {
         retval = raw1394_read(handle, node, addr, length, buffer);
 #ifdef RAW1394_V_0_9
+		nanosleep(&ts, NULL);
         if (retval < 0 && errno == EAGAIN)
-            usleep(RETRY_DELAY);
+            nanosleep(&ts, NULL);
         else
             return retval;
     }
@@ -25,7 +28,7 @@ int cooked1394_read(raw1394handle_t handle, nodeid_t node, nodeaddr_t addr,
         rcode = RAW1394_MASK_RCODE(retval);
         if( ackcode == ACK_BUSY_X || ackcode == ACK_BUSY_A
                 || ackcode == ACK_BUSY_B ) {
-            usleep(RETRY_DELAY);
+            nanosleep(&ts, NULL);
         } else {
             break;
         }
@@ -42,6 +45,7 @@ int cooked1394_write(raw1394handle_t handle, nodeid_t node, nodeaddr_t addr,
                      size_t length, quadlet_t *data)
 {
     int retval, i;
+	struct timespec ts = {0, RETRY_DELAY};
 #ifdef RAW1394_V_0_8
     int ackcode, rcode;
 #endif
@@ -49,7 +53,7 @@ int cooked1394_write(raw1394handle_t handle, nodeid_t node, nodeaddr_t addr,
         retval = raw1394_write(handle, node, addr, length, data);
 #ifdef RAW1394_V_0_9
         if (retval < 0 && errno == EAGAIN)
-            usleep(RETRY_DELAY);
+            nanosleep(&ts, NULL);
         else
             return retval;
     }
@@ -61,7 +65,7 @@ int cooked1394_write(raw1394handle_t handle, nodeid_t node, nodeaddr_t addr,
         rcode = RAW1394_MASK_RCODE(retval);
         if( ackcode == ACK_BUSY_X || ackcode == ACK_BUSY_A
                 || ackcode == ACK_BUSY_B ) {
-            usleep(RETRY_DELAY);
+            nanosleep(&ts, NULL);
         } else {
             break;
         }
